<resources>
    <string name="app_name">MiddleProjectApplication</string>
    <string name="add_contact">add contact</string>
    <string name="show_contacts">show contacts</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_number_phone">Enter number phone</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_home_address">Enter home address</string>
    <string name="take_picture">take picture</string>
    <string name="enter_web_address">Enter web address</string>
    <string name="pick_birth_date">pick birth date</string>
    <string name="pick_time_to_call">pick time to call</string>
    <string name="birthday_chosen">Birthday chosen:</string>
    <string name="call_time_chosen">Call time chosen:</string>
    <string name="pick_best_days">pick best days</string>
    <string name="best_days">Best days:</string>
    <string name="save">Save</string>
    <string name="back">Back</string>

    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="chose_days">Chose days</string>
    <string name="finish">Finish</string>
    <string name="please_enter_all_fields">Please enter all fields</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_contact">Save a contact?</string>
    <string name="please_choose">Please choose</string>
    <string name="full_name">Full name:</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address:</string>
    <string name="home_address">Home address:</string>
    <string name="picture">Picture:</string>
    <string name="web_site">Web site:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="preferred_hour">Preferred hour:</string>
    <string name="preferred_days">preferred days:</string>
    <string name="remove_contact">Remove conact?</string>
    <string name="update_contact">Update contact</string>
</resources>