<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/output_design"
            android:text="@string/full_name" />

        <TextView
            style="@style/output_design"
            android:id="@+id/full_name_output"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/output_design"
            android:text="@string/phone_number" />

        <TextView
            style="@style/output_design"
            android:id="@+id/number_phone_output"
            android:textColor="#00f"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/output_design"
            android:text="@string/email_address" />

        <TextView
            style="@style/output_design"
            android:gravity="center"
            android:textColor="#00f"
            android:id="@+id/email_address_output"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/output_design"
            android:text="@string/home_address" />

        <TextView
            style="@style/output_design"
            android:gravity="center"
            android:textColor="#00f"
            android:id="@+id/home_address_output"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/output_design"
            android:gravity="center_vertical"
            android:text="@string/picture" />

        <ImageView
            style="@style/output_design"
            android:scaleType="center"
            android:layout_height="100dp"
            android:contentDescription="@null"
            android:id="@+id/image_output" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/output_design"
            android:text="@string/web_site" />

        <TextView
            style="@style/output_design"
            android:gravity="center"
            android:textColor="#00f"
            android:id="@+id/web_address_output"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/output_design"
            android:text="@string/date_of_birth" />

        <TextView
            style="@style/output_design"
            android:gravity="center"
            android:id="@+id/birth_date_output"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/output_design"
            android:text="@string/preferred_hour" />

        <TextView
            style="@style/output_design"
            android:gravity="center"
            android:id="@+id/time_to_call_output"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/output_design"
            android:text="@string/preferred_days" />

        <TextView
            style="@style/output_design"
            android:gravity="center"
            android:id="@+id/best_days_output"/>
    </LinearLayout>

</LinearLayout>